# jcu-code-verifier

./: .gitignore  CMakeLists.txt
include/jcu_code_verifier/: code_verifier.h  constants.h  provider.h  verify_context.h
src/: code_verifier.cc
src/windows/: win_trust_provider.cc
test/: CMakeLists.txt  main.cc
